--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.gordonwong:material-sheet-fab:1.2.1'
     testCompile 'junit:junit:4.12'
 }
